--- a/test/src/gen/resources/workflows/medical/MarburgExpertSystem/exportMarburgHealthKnowledge.es.yaml
+++ b/test/src/gen/resources/workflows/medical/MarburgExpertSystem/exportMarburgHealthKnowledge.es.yaml
@@ -1,4 +1,4 @@
-- data: Disease commonCold 12:00:01
+- data: Disease common_cold 12:00:01
   name: common cold
   symptoms: [runny nose, cough, hoarseness, medium fever]
   symptoms.back: [indicates]
@@ -17,24 +17,24 @@
 - data: Symptom cough 12:00:04
   name: cough
 
-- data: Symptom runnyNose 12:00:05
+- data: Symptom runny_nose 12:00:05
   name: runny nose
 
 - data: Symptom hoarseness 12:00:06
   name: hoarseness
 
-- data: Symptom mediumFever 12:00:07
+- data: Symptom medium_fever 12:00:07
   name: medium fever
 
 - data: Symptom chills 12:00:08
   name: chills
 
-- data: Symptom jointPain 12:00:09
+- data: Symptom joint_pain 12:00:09
   name: joint pain
 
 - data: Symptom headache 12:00:10
   name: headache
 
-- data: Symptom lungNoises 12:00:11
+- data: Symptom lung_noises 12:00:11
   name: lung noises
 
