--- a/test/src/gen/resources/workflows/medical/FamilyDoctorDegen/exportMarburgHealthKnowledge.es.yaml
+++ b/test/src/gen/resources/workflows/medical/FamilyDoctorDegen/exportMarburgHealthKnowledge.es.yaml
@@ -1,40 +1,40 @@
-- data: Disease commonCold 12:00:01
+- data: Disease 12:00:01
   name: common cold
   symptoms: [runny nose, cough, hoarseness, medium fever]
   symptoms.back: [indicates]
   counterSymptoms: [chills, joint pain]
   counterSymptoms.back: [excludes]
 
-- data: Disease influenza 12:00:02
+- data: Disease 12:00:02
   name: influenza
   symptoms: [cough, medium fever, chills, joint pain, headache]
   counterSymptoms: [lung noises]
 
-- data: Disease pneumonia 12:00:03
+- data: Disease 12:00:03
   name: pneumonia
   symptoms: [cough, medium fever, chills, joint pain, headache, lung noises]
 
-- data: Symptom cough 12:00:04
+- data: Symptom 12:00:04
   name: cough
 
-- data: Symptom runnyNose 12:00:05
+- data: Symptom 12:00:05
   name: runny nose
 
-- data: Symptom hoarseness 12:00:06
+- data: Symptom 12:00:06
   name: hoarseness
 
-- data: Symptom mediumFeverd 12:00:07
-  name: medium feverd
+- data: Symptom 12:00:07
+  name: medium fever
 
 - data: Symptom chills 12:00:08
   name: chills
 
-- data: Symptom jointPain 12:00:09
+- data: Symptom 12:00:09
   name: joint pain
 
-- data: Symptom headache 12:00:10
+- data: Symptom 12:00:10
   name: headache
 
-- data: Symptom lungNoises 12:00:11
+- data: Symptom 12:00:11
   name: lung noises
 
