--- a/test/src/main/java/uks/debuggen/medical/marburgexpertsystem/MarburgHealthSystem/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/medical/marburgexpertsystem/MarburgHealthSystem/classModel.yaml
@@ -32,7 +32,7 @@
   attributes: 	marburgHealthSystemBuilder_model 	marburgHealthSystemBuilder_eventStore 	marburgHealthSystemBuilder_loaderMap 	marburgHealthSystemBuilder_groupStore
   importList: 	"import java.util.LinkedHashMap;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.medical.marburgexpertsystem.events.*;" 	"import java.util.function.Function;"
   imports: 	"import java.util.LinkedHashMap;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.medical.marburgexpertsystem.events.*;" 	"import java.util.function.Function;"
-  methods: 	marburgHealthSystemBuilder_outdated 	marburgHealthSystemBuilder_storeDiseaseBuilt 	marburgHealthSystemBuilder_loadDiseaseBuilt 	marburgHealthSystemBuilder_storeSymptomBuilt 	marburgHealthSystemBuilder_loadSymptomBuilt 	marburgHealthSystemBuilder_load 	marburgHealthSystemBuilder_initLoaderMap 	marburgHealthSystemBuilder_getVarName 	marburgHealthSystemBuilder_addToGroup 	marburgHealthSystemBuilder_stripBrackets
+  methods: 	marburgHealthSystemBuilder_outdated 	marburgHealthSystemBuilder_storeDiseaseBuilt 	marburgHealthSystemBuilder_loadDiseaseBuilt 	marburgHealthSystemBuilder_storeSymptomBuilt 	marburgHealthSystemBuilder_loadSymptomBuilt 	marburgHealthSystemBuilder_load 	marburgHealthSystemBuilder_initLoaderMap 	marburgHealthSystemBuilder_getObjectId 	marburgHealthSystemBuilder_addToGroup 	marburgHealthSystemBuilder_stripBrackets
   model: 	c
   modified: 	false
   name: 	MarburgHealthSystemBuilder
@@ -154,13 +154,13 @@ handleDemoLoadDiseasesCommand(event);
   declaration: 	"private void handleDemoLoadDiseasesCommand(LoadDiseasesCommand event)"
   id: 	MarburgHealthSystemBusinessLogic_handleDemoLoadDiseasesCommand
   methodBody: 	"if (event.getId().equals(\"12:00\")) {
-   DiseaseBuilt commonColdEvent = new DiseaseBuilt();
-   commonColdEvent.setId(\"12:00:01\");
-   commonColdEvent.setBlockId(\"commonCold\");
-   commonColdEvent.setName(\"common cold\");
-   commonColdEvent.setSymptoms(\"[runny nose, cough, hoarseness, medium fever]\");
-   commonColdEvent.setCounterSymptoms(\"[chills, joint pain]\");
-   service.apply(commonColdEvent);
+   DiseaseBuilt common_coldEvent = new DiseaseBuilt();
+   common_coldEvent.setId(\"12:00:01\");
+   common_coldEvent.setBlockId(\"common_cold\");
+   common_coldEvent.setName(\"common cold\");
+   common_coldEvent.setSymptoms(\"[runny nose, cough, hoarseness, medium fever]\");
+   common_coldEvent.setCounterSymptoms(\"[chills, joint pain]\");
+   service.apply(common_coldEvent);
 
    DiseaseBuilt influenzaEvent = new DiseaseBuilt();
    influenzaEvent.setId(\"12:00:02\");
@@ -183,11 +183,11 @@ handleDemoLoadDiseasesCommand(event);
    coughEvent.setName(\"cough\");
    service.apply(coughEvent);
 
-   SymptomBuilt runnyNoseEvent = new SymptomBuilt();
-   runnyNoseEvent.setId(\"12:00:05\");
-   runnyNoseEvent.setBlockId(\"runnyNose\");
-   runnyNoseEvent.setName(\"runny nose\");
-   service.apply(runnyNoseEvent);
+   SymptomBuilt runny_noseEvent = new SymptomBuilt();
+   runny_noseEvent.setId(\"12:00:05\");
+   runny_noseEvent.setBlockId(\"runny_nose\");
+   runny_noseEvent.setName(\"runny nose\");
+   service.apply(runny_noseEvent);
 
    SymptomBuilt hoarsenessEvent = new SymptomBuilt();
    hoarsenessEvent.setId(\"12:00:06\");
@@ -195,11 +195,11 @@ handleDemoLoadDiseasesCommand(event);
    hoarsenessEvent.setName(\"hoarseness\");
    service.apply(hoarsenessEvent);
 
-   SymptomBuilt mediumFeverEvent = new SymptomBuilt();
-   mediumFeverEvent.setId(\"12:00:07\");
-   mediumFeverEvent.setBlockId(\"mediumFever\");
-   mediumFeverEvent.setName(\"medium fever\");
-   service.apply(mediumFeverEvent);
+   SymptomBuilt medium_feverEvent = new SymptomBuilt();
+   medium_feverEvent.setId(\"12:00:07\");
+   medium_feverEvent.setBlockId(\"medium_fever\");
+   medium_feverEvent.setName(\"medium fever\");
+   service.apply(medium_feverEvent);
 
    SymptomBuilt chillsEvent = new SymptomBuilt();
    chillsEvent.setId(\"12:00:08\");
@@ -207,11 +207,11 @@ handleDemoLoadDiseasesCommand(event);
    chillsEvent.setName(\"chills\");
    service.apply(chillsEvent);
 
-   SymptomBuilt jointPainEvent = new SymptomBuilt();
-   jointPainEvent.setId(\"12:00:09\");
-   jointPainEvent.setBlockId(\"jointPain\");
-   jointPainEvent.setName(\"joint pain\");
-   service.apply(jointPainEvent);
+   SymptomBuilt joint_painEvent = new SymptomBuilt();
+   joint_painEvent.setId(\"12:00:09\");
+   joint_painEvent.setBlockId(\"joint_pain\");
+   joint_painEvent.setName(\"joint pain\");
+   service.apply(joint_painEvent);
 
    SymptomBuilt headacheEvent = new SymptomBuilt();
    headacheEvent.setId(\"12:00:10\");
@@ -219,11 +219,11 @@ handleDemoLoadDiseasesCommand(event);
    headacheEvent.setName(\"headache\");
    service.apply(headacheEvent);
 
-   SymptomBuilt lungNoisesEvent = new SymptomBuilt();
-   lungNoisesEvent.setId(\"12:00:11\");
-   lungNoisesEvent.setBlockId(\"lungNoises\");
-   lungNoisesEvent.setName(\"lung noises\");
-   service.apply(lungNoisesEvent);
+   SymptomBuilt lung_noisesEvent = new SymptomBuilt();
+   lung_noisesEvent.setId(\"12:00:11\");
+   lung_noisesEvent.setBlockId(\"lung_noises\");
+   lung_noisesEvent.setName(\"lung noises\");
+   service.apply(lung_noisesEvent);
 
 }
 "
@@ -393,11 +393,11 @@ Disease object = model.getOrCreateDisease(event.getBlockId());
 object.setName(event.getName());
 for (String name : stripBrackets(event.getSymptoms()).split(\",\\s+\")) {
    if (name.equals(\"\")) continue;
-   object.withSymptoms(model.getOrCreateSymptom(getVarName(name)));
+   object.withSymptoms(model.getOrCreateSymptom(getObjectId(name)));
 }
 for (String name : stripBrackets(event.getCounterSymptoms()).split(\",\\s+\")) {
    if (name.equals(\"\")) continue;
-   object.withCounterSymptoms(model.getOrCreateSymptom(getVarName(name)));
+   object.withCounterSymptoms(model.getOrCreateSymptom(getObjectId(name)));
 }
 return object;
 "
@@ -490,26 +490,21 @@ return object;
   returnType: 	void
   signature: 	"class/MarburgHealthSystemBuilder/method/initLoaderMap()"
 
-- marburgHealthSystemBuilder_getVarName: 	org.fulib.classmodel.FMethod
+- marburgHealthSystemBuilder_getObjectId: 	org.fulib.classmodel.FMethod
   annotations: 	""
   clazz: 	marburgHealthSystemBuilder
-  declaration: 	"public String getVarName(String value)"
-  id: 	MarburgHealthSystemBuilder_getVarName
+  declaration: 	"public String getObjectId(String value)"
+  id: 	MarburgHealthSystemBuilder_getObjectId
   methodBody: 	"      if (value == null) {
          return null;
       }
-      String[] split = value.split(\"\\s+\");
-      String varName = split[0];
-      for (int i = 1; i < split.length; i++) {
-         varName += org.fulib.StrUtil.cap(split[i]);
-      }
-      return varName;"
+      return value.replaceAll(\"\\W+\", \"_\");"
   modified: 	false
   modifiers: 	public
-  name: 	getVarName
+  name: 	getObjectId
   paramsString: 	"String value"
   returnType: 	String
-  signature: 	"class/MarburgHealthSystemBuilder/method/getVarName(String)"
+  signature: 	"class/MarburgHealthSystemBuilder/method/getObjectId(String)"
 
 - marburgHealthSystemBuilder_addToGroup: 	org.fulib.classmodel.FMethod
   annotations: 	""
