--- a/test/src/test/java/uks/debuggen/medical/familydoctordegen/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/medical/familydoctordegen/classModel.yaml
@@ -77,6 +77,8 @@ for (DataEvent dataEvent : docMedical.getBuilder().getEventStore().values()) {
    docMedical.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = docMedical.getBuilder().getModel().getModelMap();
+org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/docMedical14_00.svg\", modelMap.values());
+
 open(\"http://localhost:42001\");
 // check data note 14:00:01
 pre = $(\"#data\");
@@ -104,6 +106,8 @@ for (DataEvent dataEvent : docMedical.getBuilder().getEventStore().values()) {
    docMedical.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = docMedical.getBuilder().getModel().getModelMap();
+org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/docMedical14_01.svg\", modelMap.values());
+
 open(\"http://localhost:42001\");
 // check data note 14:01:01
 pre = $(\"#data\");
@@ -130,12 +134,14 @@ for (DataEvent dataEvent : docMedical.getBuilder().getEventStore().values()) {
    docMedical.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = docMedical.getBuilder().getModel().getModelMap();
+org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/docMedical14_02.svg\", modelMap.values());
+
 open(\"http://localhost:42001\");
 // check data note 14:02:01
 pre = $(\"#data\");
 pre.shouldHave(text(\"- cough:\"));
 pre.shouldHave(matchText(\"name:.*cough\"));
-pre.shouldHave(matchText(\"consultations:.*alice_2021_06_02T14_00.*\"));
+pre.shouldHave(matchText(\"consultations:.*alice_2021_06_02T14_00\"));
 
 // create SymptomEvent: symptom validated
 SymptomEvent e1403 = new SymptomEvent();
@@ -156,12 +162,14 @@ for (DataEvent dataEvent : docMedical.getBuilder().getEventStore().values()) {
    docMedical.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = docMedical.getBuilder().getModel().getModelMap();
+org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/docMedical14_03.svg\", modelMap.values());
+
 open(\"http://localhost:42001\");
 // check data note 14:03:01
 pre = $(\"#data\");
-pre.shouldHave(text(\"- runnyNose:\"));
+pre.shouldHave(text(\"- runny_nose:\"));
 pre.shouldHave(matchText(\"name:.*\\"runny nose\\"\"));
-pre.shouldHave(matchText(\"consultations:.*alice_2021_06_02T14_00.*\"));
+pre.shouldHave(matchText(\"consultations:.*alice_2021_06_02T14_00\"));
 
 // create TestEvent: test done
 TestEvent e1404 = new TestEvent();
@@ -183,6 +191,8 @@ for (DataEvent dataEvent : docMedical.getBuilder().getEventStore().values()) {
    docMedical.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = docMedical.getBuilder().getModel().getModelMap();
+org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/docMedical14_04.svg\", modelMap.values());
+
 open(\"http://localhost:42001\");
 // check data note 14:04:01
 pre = $(\"#data\");
@@ -195,7 +205,7 @@ pre.shouldHave(matchText(\"consultation:.*alice_2021_06_02T14_00\"));
 pre = $(\"#data\");
 pre.shouldHave(text(\"- fever:\"));
 pre.shouldHave(matchText(\"name:.*fever\"));
-pre.shouldHave(matchText(\"consultations:.*alice_2021_06_02T14_00.*\"));
+pre.shouldHave(matchText(\"consultations:.*alice_2021_06_02T14_00\"));
 
 // create DiagnosisEvent: diagnosis done
 DiagnosisEvent e1405 = new DiagnosisEvent();
@@ -216,12 +226,14 @@ for (DataEvent dataEvent : docMedical.getBuilder().getEventStore().values()) {
    docMedical.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = docMedical.getBuilder().getModel().getModelMap();
+org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/docMedical14_05.svg\", modelMap.values());
+
 open(\"http://localhost:42001\");
 // check data note 14:05:01
 pre = $(\"#data\");
 pre.shouldHave(text(\"- alice_2021_06_02T14_00:\"));
 pre.shouldHave(matchText(\"cid:.*Alice#2021-06-02T14:00\"));
-pre.shouldHave(matchText(\"diagnosis:.*commonCold\"));
+pre.shouldHave(matchText(\"diagnosis:.*common_cold\"));
 
 // create TreatmentEvent: treatment initiated
 TreatmentEvent e1406 = new TreatmentEvent();
@@ -242,6 +254,8 @@ for (DataEvent dataEvent : docMedical.getBuilder().getEventStore().values()) {
    docMedical.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = docMedical.getBuilder().getModel().getModelMap();
+org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/docMedical14_06.svg\", modelMap.values());
+
 open(\"http://localhost:42001\");
 // check data note 14:06:01
 pre = $(\"#data\");
