--- a/test/src/test/java/uks/debuggen/medical/marburgexpertsystem/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/medical/marburgexpertsystem/classModel.yaml
@@ -73,31 +73,33 @@ for (DataEvent dataEvent : marburgHealthSystem.getBuilder().getEventStore().valu
    marburgHealthSystem.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = marburgHealthSystem.getBuilder().getModel().getModelMap();
+org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/marburgHealthSystem12_00.svg\", modelMap.values());
+
 open(\"http://localhost:42001\");
 // check data note 12:00:01
 pre = $(\"#data\");
-pre.shouldHave(text(\"- commonCold:\"));
+pre.shouldHave(text(\"- common_cold:\"));
 pre.shouldHave(matchText(\"name:.*\\"common cold\\"\"));
-pre.shouldHave(matchText(\"symptoms:.*runny_nose.*cough.*hoarseness.*medium_fever.*\"));
-pre.shouldHave(matchText(\"counterSymptoms:.*chills.*joint_pain.*\"));
+pre.shouldHave(matchText(\"symptoms:.*runny_nosecoughhoarsenessmedium_fever\"));
+pre.shouldHave(matchText(\"counterSymptoms:.*chillsjoint_pain\"));
 // check data note 12:00:02
 pre = $(\"#data\");
 pre.shouldHave(text(\"- influenza:\"));
 pre.shouldHave(matchText(\"name:.*influenza\"));
-pre.shouldHave(matchText(\"symptoms:.*cough.*medium_fever.*chills.*joint_pain.*headache.*\"));
-pre.shouldHave(matchText(\"counterSymptoms:.*lung_noises.*\"));
+pre.shouldHave(matchText(\"symptoms:.*coughmedium_feverchillsjoint_painheadache\"));
+pre.shouldHave(matchText(\"counterSymptoms:.*lung_noises\"));
 // check data note 12:00:03
 pre = $(\"#data\");
 pre.shouldHave(text(\"- pneumonia:\"));
 pre.shouldHave(matchText(\"name:.*pneumonia\"));
-pre.shouldHave(matchText(\"symptoms:.*cough.*medium_fever.*chills.*joint_pain.*headache.*lung_noises.*\"));
+pre.shouldHave(matchText(\"symptoms:.*coughmedium_feverchillsjoint_painheadachelung_noises\"));
 // check data note 12:00:04
 pre = $(\"#data\");
 pre.shouldHave(text(\"- cough:\"));
 pre.shouldHave(matchText(\"name:.*cough\"));
 // check data note 12:00:05
 pre = $(\"#data\");
-pre.shouldHave(text(\"- runnyNose:\"));
+pre.shouldHave(text(\"- runny_nose:\"));
 pre.shouldHave(matchText(\"name:.*\\"runny nose\\"\"));
 // check data note 12:00:06
 pre = $(\"#data\");
@@ -105,7 +107,7 @@ pre.shouldHave(text(\"- hoarseness:\"));
 pre.shouldHave(matchText(\"name:.*hoarseness\"));
 // check data note 12:00:07
 pre = $(\"#data\");
-pre.shouldHave(text(\"- mediumFever:\"));
+pre.shouldHave(text(\"- medium_fever:\"));
 pre.shouldHave(matchText(\"name:.*\\"medium fever\\"\"));
 // check data note 12:00:08
 pre = $(\"#data\");
@@ -113,7 +115,7 @@ pre.shouldHave(text(\"- chills:\"));
 pre.shouldHave(matchText(\"name:.*chills\"));
 // check data note 12:00:09
 pre = $(\"#data\");
-pre.shouldHave(text(\"- jointPain:\"));
+pre.shouldHave(text(\"- joint_pain:\"));
 pre.shouldHave(matchText(\"name:.*\\"joint pain\\"\"));
 // check data note 12:00:10
 pre = $(\"#data\");
@@ -121,7 +123,7 @@ pre.shouldHave(text(\"- headache:\"));
 pre.shouldHave(matchText(\"name:.*headache\"));
 // check data note 12:00:11
 pre = $(\"#data\");
-pre.shouldHave(text(\"- lungNoises:\"));
+pre.shouldHave(text(\"- lung_noises:\"));
 pre.shouldHave(matchText(\"name:.*\\"lung noises\\"\"));
 
 System.out.println();
