--- a/test/src/test/java/uks/fulibgen/shop/classModel.yaml
+++ b/test/src/test/java/uks/fulibgen/shop/classModel.yaml
@@ -80,6 +80,8 @@ for (DataEvent dataEvent : storage.getBuilder().getEventStore().values()) {
    storage.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = storage.getBuilder().getModel().getModelMap();
+org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/storage12_00.svg\", modelMap.values());
+
 open(\"http://localhost:42002\");
 // check data note 12:01
 pre = $(\"#data\");
@@ -114,6 +116,8 @@ for (DataEvent dataEvent : shop.getBuilder().getEventStore().values()) {
    shop.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = shop.getBuilder().getModel().getModelMap();
+org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/shop13_01.svg\", modelMap.values());
+
 open(\"http://localhost:42100\");
 // check data note 13:06
 pre = $(\"#data\");
@@ -128,6 +132,8 @@ for (DataEvent dataEvent : storage.getBuilder().getEventStore().values()) {
    storage.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = storage.getBuilder().getModel().getModelMap();
+org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/storage13_01.svg\", modelMap.values());
+
 open(\"http://localhost:42002\");
 // check data note 13:05
 pre = $(\"#data\");
@@ -158,6 +164,8 @@ for (DataEvent dataEvent : storage.getBuilder().getEventStore().values()) {
    storage.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = storage.getBuilder().getModel().getModelMap();
+org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/storage14_00.svg\", modelMap.values());
+
 open(\"http://localhost:42002\");
 // check data note 14:01
 pre = $(\"#data\");
@@ -177,6 +185,8 @@ for (DataEvent dataEvent : shop.getBuilder().getEventStore().values()) {
    shop.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = shop.getBuilder().getModel().getModelMap();
+org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/shop14_00.svg\", modelMap.values());
+
 open(\"http://localhost:42100\");
 // check data note 14:04
 pre = $(\"#data\");
@@ -205,6 +215,8 @@ for (DataEvent dataEvent : shop.getBuilder().getEventStore().values()) {
    shop.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = shop.getBuilder().getModel().getModelMap();
+org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/shop13_11.svg\", modelMap.values());
+
 open(\"http://localhost:42100\");
 // check data note 13:16
 pre = $(\"#data\");
@@ -219,6 +231,8 @@ for (DataEvent dataEvent : storage.getBuilder().getEventStore().values()) {
    storage.getBuilder().load(dataEvent.getBlockId());
 }
 modelMap = storage.getBuilder().getModel().getModelMap();
+org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/storage13_11.svg\", modelMap.values());
+
 open(\"http://localhost:42002\");
 
 System.out.println();
