--- a/test/src/gen/resources/workflows/medical/FamilyDoctorDegen/Consultations.es.yaml
+++ b/test/src/gen/resources/workflows/medical/FamilyDoctorDegen/Consultations.es.yaml
@@ -77,8 +77,11 @@
 
 - data: Consultation
   cid: Alice#2021-06-02T14:00
+  patient: Alice
   diagnosis: common cold
   diagnosis.back: [consultations]
+
+  patient.back: [consultations]
 
 - action: Doc Degen
 - event: treatment initiated
@@ -87,4 +90,6 @@
 
 - data: Consultation
   cid: Alice#2021-06-02T14:00
+  patient: Alice
+  diagnosis: common cold
   treatment: ibuprofen 400 1-1-1
