--- a/test/src/gen/resources/workflows/medical/MarburgExpertSystem/MarburgExpertSystem.es.yaml
+++ b/test/src/gen/resources/workflows/medical/MarburgExpertSystem/MarburgExpertSystem.es.yaml
@@ -11,7 +11,7 @@
 - policy: MarburgHealthSystem
   trigger: 12:00
 
-- brokertopic: marburg health knowledge
+- brokerTopic: marburg health knowledge
 
 - data: Disease
   name: common cold
