--- a/test/src/gen/resources/workflows/PartyWorkflow2.es.yaml
+++ b/test/src/gen/resources/workflows/PartyWorkflow2.es.yaml
@@ -10,7 +10,7 @@
 
 - event: login succeeded 13:00
 
-- boundedcontext: start party2
+- boundedContext: start party2
 
 - event: party created 14:00
 
