--- a/test/src/test/java/uks/debuggen/medical/familydoctordegen/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/medical/familydoctordegen/classModel.yaml
@@ -56,7 +56,7 @@ LinkedHashMap<String, Object> modelMap;
 
 // workflow FamilyDoctorDegen
 // workflow ImportKnowledge
-// workflow SimpleConsulting
+// workflow SimpleConsultations
 // create PatientRegisteredEvent: patient registered 14:00
 PatientRegisteredEvent e1400 = new PatientRegisteredEvent();
 e1400.setId(\"14:00\");
@@ -233,7 +233,6 @@ open(\"http://localhost:42001\");
 pre = $(\"#data\");
 pre.shouldHave(text(\"- alice_2021_06_02T14_00:\"));
 pre.shouldHave(matchText(\"cid:.*Alice#2021-06-02T14:00\"));
-pre.shouldHave(matchText(\"patient:.*alice\"));
 pre.shouldHave(matchText(\"diagnosis:.*common_cold\"));
 
 // create TreatmentEvent: treatment initiated
@@ -262,8 +261,6 @@ open(\"http://localhost:42001\");
 pre = $(\"#data\");
 pre.shouldHave(text(\"- alice_2021_06_02T14_00:\"));
 pre.shouldHave(matchText(\"cid:.*Alice#2021-06-02T14:00\"));
-pre.shouldHave(matchText(\"patient:.*alice\"));
-pre.shouldHave(matchText(\"diagnosis:.*common_cold\"));
 pre.shouldHave(matchText(\"treatment:.*\\"ibuprofen 400 1-1-1\\"\"));
 
 // workflow Accounting
