--- a/test/src/gen/resources/workflows/medical/FamilyDoctorDegen/Consultations.es.yaml
+++ b/test/src/gen/resources/workflows/medical/FamilyDoctorDegen/Consultations.es.yaml
@@ -8,7 +8,13 @@
 - policy: DocMedical
   trigger: 12:00 - 13:00
 
-- workflow: simple consulting
+- data: Disease
+  migratedTo: Disease2
+
+
+
+
+- workflow: simple consultations
 
 - action: Doc Degen
 
@@ -77,11 +83,8 @@
 
 - data: Consultation
   cid: Alice#2021-06-02T14:00
-  patient: Alice
   diagnosis: common cold
   diagnosis.back: [consultations]
-
-  patient.back: [consultations]
 
 - action: Doc Degen
 - event: treatment initiated
@@ -90,6 +93,4 @@
 
 - data: Consultation
   cid: Alice#2021-06-02T14:00
-  patient: Alice
-  diagnosis: common cold
   treatment: ibuprofen 400 1-1-1
