Event merging implemented. Code gen adapted.

--- a/test/src/main/java/uks/fulibgen/shop/Storage/classModel.yaml
+++ b/test/src/main/java/uks/fulibgen/shop/Storage/classModel.yaml
@@ -405,6 +405,7 @@ handleDemoPickOrderCommand(event);
       }
 
       if (oldEvent.getId().compareTo(event.getId()) < 0) {
+         new org.fulib.yaml.Yamler2().mergeObjects(oldEvent, event);
          eventStore.put(event.getBlockId(), event);
          return false;
       }
