--- a/test/src/main/java/uks/debuggen/medical/marburgexpertsystem/MarburgHealthSystem/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/medical/marburgexpertsystem/MarburgHealthSystem/classModel.yaml
@@ -352,6 +352,7 @@ handleDemoLoadDiseasesCommand(event);
       }
 
       if (oldEvent.getId().compareTo(event.getId()) < 0) {
+         new org.fulib.yaml.Yamler2().mergeObjects(oldEvent, event);
          eventStore.put(event.getBlockId(), event);
          return false;
       }
