--- a/test/src/test/java/uks/debuggen/party/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/party/classModel.yaml
@@ -9,8 +9,8 @@
 
 - testPartyApp: 	org.fulib.classmodel.Clazz
   attributes: 	testPartyApp_eventBroker
-  importList: 	"import org.junit.Test;" 	"import uks.debuggen.party.events.*;" 	"import uks.debuggen.party.PartyApp.PartyAppService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import static com.codeborne.selenide.Condition.text;" 	"import static com.codeborne.selenide.Condition.matchText;" 	"import com.codeborne.selenide.SelenideElement;"
-  imports: 	"import org.junit.Test;" 	"import uks.debuggen.party.events.*;" 	"import uks.debuggen.party.PartyApp.PartyAppService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import static com.codeborne.selenide.Condition.text;" 	"import static com.codeborne.selenide.Condition.matchText;" 	"import com.codeborne.selenide.SelenideElement;"
+  importList: 	"import org.junit.Test;" 	"import java.util.LinkedHashMap;" 	"import uks.debuggen.party.events.*;" 	"import uks.debuggen.party.PartyApp.PartyAppService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import static com.codeborne.selenide.Condition.text;" 	"import static com.codeborne.selenide.Condition.matchText;" 	"import com.codeborne.selenide.SelenideElement;"
+  imports: 	"import org.junit.Test;" 	"import java.util.LinkedHashMap;" 	"import uks.debuggen.party.events.*;" 	"import uks.debuggen.party.PartyApp.PartyAppService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import static com.codeborne.selenide.Condition.text;" 	"import static com.codeborne.selenide.Condition.matchText;" 	"import com.codeborne.selenide.SelenideElement;"
   methods: 	testPartyApp_PartyApp 	testPartyApp_publish
   model: 	c
   modified: 	false
@@ -52,8 +52,10 @@ $(\"body\").shouldHave(text(\"event broker\"));
 
 SelenideElement pre = $(\"pre\");
 pre.shouldHave(text(\"http://localhost:42001/apply\"));
+LinkedHashMap<String, Object> modelMap;
 
 // workflow Overview
+
 // create UserRegisteredEvent: user registered 12:00
 UserRegisteredEvent e1200 = new UserRegisteredEvent();
 e1200.setId(\"12:00\");
@@ -100,6 +102,7 @@ pre = $(\"#history\");
 pre.shouldHave(text(\"- 16_00:\"));
 
 // workflow RegisterNewUser
+
 // page 12:00
 open(\"http://localhost:42001/page/12_00\");
 $(\"#name\").setValue(\"Alice\");
@@ -113,6 +116,13 @@ pre.shouldHave(text(\"- 12_01:\"));
 open(\"http://localhost:42001\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 12_01:\"));
+for (DataEvent dataEvent : partyApp.getBuilder().getEventStore().values()) {
+   partyApp.getBuilder().load(dataEvent.getBlockId());
+}
+modelMap = partyApp.getBuilder().getModel().getModelMap();
+org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/partyApp12_01.svg\", modelMap.values());
+
+open(\"http://localhost:42001\");
 
 // page 12:02
 open(\"http://localhost:42001/page/12_02\");
@@ -127,6 +137,13 @@ pre.shouldHave(text(\"- 12_03:\"));
 open(\"http://localhost:42001\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 12_03:\"));
+for (DataEvent dataEvent : partyApp.getBuilder().getEventStore().values()) {
+   partyApp.getBuilder().load(dataEvent.getBlockId());
+}
+modelMap = partyApp.getBuilder().getModel().getModelMap();
+org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/partyApp12_03.svg\", modelMap.values());
+
+open(\"http://localhost:42001\");
 
 // page 12:04
 open(\"http://localhost:42001/page/12_04\");
@@ -141,9 +158,16 @@ pre.shouldHave(text(\"- 12_05:\"));
 open(\"http://localhost:42001\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 12_05:\"));
+for (DataEvent dataEvent : partyApp.getBuilder().getEventStore().values()) {
+   partyApp.getBuilder().load(dataEvent.getBlockId());
+}
+modelMap = partyApp.getBuilder().getModel().getModelMap();
+org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/partyApp12_05.svg\", modelMap.values());
+
+open(\"http://localhost:42001\");
 // check data note 12:05:02
 pre = $(\"#data\");
-pre.shouldHave(text(\"- Alice:\"));
+pre.shouldHave(text(\"- alice:\"));
 pre.shouldHave(matchText(\"name:.*Alice\"));
 pre.shouldHave(matchText(\"email:.*a@b.de\"));
 pre.shouldHave(matchText(\"password:.*secret\"));
@@ -158,6 +182,7 @@ pre = $(\"#history\");
 pre.shouldHave(text(\"- 12_07:\"));
 
 // workflow LoginOldUser
+
 // page 13:00
 open(\"http://localhost:42001/page/13_00\");
 $(\"#name\").setValue(\"Alice\");
@@ -171,6 +196,13 @@ pre.shouldHave(text(\"- 13_01:\"));
 open(\"http://localhost:42001\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 13_01:\"));
+for (DataEvent dataEvent : partyApp.getBuilder().getEventStore().values()) {
+   partyApp.getBuilder().load(dataEvent.getBlockId());
+}
+modelMap = partyApp.getBuilder().getModel().getModelMap();
+org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/partyApp13_01.svg\", modelMap.values());
+
+open(\"http://localhost:42001\");
 
 // page 13:02
 open(\"http://localhost:42001/page/13_02\");
@@ -185,6 +217,13 @@ pre.shouldHave(text(\"- 13_03:\"));
 open(\"http://localhost:42001\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 13_03:\"));
+for (DataEvent dataEvent : partyApp.getBuilder().getEventStore().values()) {
+   partyApp.getBuilder().load(dataEvent.getBlockId());
+}
+modelMap = partyApp.getBuilder().getModel().getModelMap();
+org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/partyApp13_03.svg\", modelMap.values());
+
+open(\"http://localhost:42001\");
 
 // page 13:04
 open(\"http://localhost:42001/page/13_04\");
@@ -196,6 +235,7 @@ pre = $(\"#history\");
 pre.shouldHave(text(\"- 13_05:\"));
 
 // workflow StartParty
+
 // page 14:00
 open(\"http://localhost:42001/page/14_00\");
 $(\"#party\").setValue(\"SE BBQ\");
@@ -211,6 +251,13 @@ pre.shouldHave(text(\"- 14_01:\"));
 open(\"http://localhost:42001\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 14_01:\"));
+for (DataEvent dataEvent : partyApp.getBuilder().getEventStore().values()) {
+   partyApp.getBuilder().load(dataEvent.getBlockId());
+}
+modelMap = partyApp.getBuilder().getModel().getModelMap();
+org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/partyApp14_01.svg\", modelMap.values());
+
+open(\"http://localhost:42001\");
 // check data note 14:01:02
 pre = $(\"#data\");
 pre.shouldHave(text(\"- sE_BBQ:\"));
@@ -241,6 +288,13 @@ pre.shouldHave(text(\"- 14_05:\"));
 open(\"http://localhost:42001\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 14_05:\"));
+for (DataEvent dataEvent : partyApp.getBuilder().getEventStore().values()) {
+   partyApp.getBuilder().load(dataEvent.getBlockId());
+}
+modelMap = partyApp.getBuilder().getModel().getModelMap();
+org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/partyApp14_05.svg\", modelMap.values());
+
+open(\"http://localhost:42001\");
 // check data note 14:05:01
 pre = $(\"#data\");
 pre.shouldHave(text(\"- beer:\"));
@@ -277,6 +331,13 @@ pre.shouldHave(text(\"- 14_09:\"));
 open(\"http://localhost:42001\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 14_09:\"));
+for (DataEvent dataEvent : partyApp.getBuilder().getEventStore().values()) {
+   partyApp.getBuilder().load(dataEvent.getBlockId());
+}
+modelMap = partyApp.getBuilder().getModel().getModelMap();
+org.fulib.FulibTools.objectDiagrams().dumpSVG(\"tmp/partyApp14_09.svg\", modelMap.values());
+
+open(\"http://localhost:42001\");
 // check data note 14:09:01
 pre = $(\"#data\");
 pre.shouldHave(text(\"- meat:\"));
