--- a/test/src/main/java/uks/debuggen/interconnect/CityElectricsKassel/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/interconnect/CityElectricsKassel/classModel.yaml
@@ -31,7 +31,7 @@
   attributes: 	cityElectricsKasselBuilder_model 	cityElectricsKasselBuilder_eventStore 	cityElectricsKasselBuilder_loaderMap 	cityElectricsKasselBuilder_groupStore
   importList: 	"import java.util.LinkedHashMap;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.interconnect.events.*;" 	"import java.util.function.Function;"
   imports: 	"import java.util.LinkedHashMap;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.interconnect.events.*;" 	"import java.util.function.Function;"
-  methods: 	cityElectricsKasselBuilder_outdated 	cityElectricsKasselBuilder_load 	cityElectricsKasselBuilder_initLoaderMap 	cityElectricsKasselBuilder_addToGroup 	cityElectricsKasselBuilder_stripBrackets
+  methods: 	cityElectricsKasselBuilder_outdated 	cityElectricsKasselBuilder_load 	cityElectricsKasselBuilder_initLoaderMap 	cityElectricsKasselBuilder_getObjectId 	cityElectricsKasselBuilder_addToGroup 	cityElectricsKasselBuilder_stripBrackets
   model: 	c
   modified: 	false
   name: 	CityElectricsKasselBuilder
@@ -241,6 +241,7 @@ handleDemoChargingRequestedEvent(event);
       }
 
       if (oldEvent.getId().compareTo(event.getId()) < 0) {
+         new org.fulib.yaml.Yamler2().mergeObjects(oldEvent, event);
          eventStore.put(event.getBlockId(), event);
          return false;
       }
@@ -296,6 +297,22 @@ handleDemoChargingRequestedEvent(event);
   paramsString: 	""
   returnType: 	void
   signature: 	"class/CityElectricsKasselBuilder/method/initLoaderMap()"
+
+- cityElectricsKasselBuilder_getObjectId: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	cityElectricsKasselBuilder
+  declaration: 	"public String getObjectId(String value)"
+  id: 	CityElectricsKasselBuilder_getObjectId
+  methodBody: 	"      if (value == null) {
+         return null;
+      }
+      return value.replaceAll(\"\\W+\", \"_\");"
+  modified: 	false
+  modifiers: 	public
+  name: 	getObjectId
+  paramsString: 	"String value"
+  returnType: 	String
+  signature: 	"class/CityElectricsKasselBuilder/method/getObjectId(String)"
 
 - cityElectricsKasselBuilder_addToGroup: 	org.fulib.classmodel.FMethod
   annotations: 	""
