--- a/test/src/main/java/uks/debuggen/interconnect/IonicKassel42/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/interconnect/IonicKassel42/classModel.yaml
@@ -31,7 +31,7 @@
   attributes: 	ionicKassel42Builder_model 	ionicKassel42Builder_eventStore 	ionicKassel42Builder_loaderMap 	ionicKassel42Builder_groupStore
   importList: 	"import java.util.LinkedHashMap;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.interconnect.events.*;" 	"import java.util.function.Function;"
   imports: 	"import java.util.LinkedHashMap;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.interconnect.events.*;" 	"import java.util.function.Function;"
-  methods: 	ionicKassel42Builder_outdated 	ionicKassel42Builder_load 	ionicKassel42Builder_initLoaderMap 	ionicKassel42Builder_addToGroup 	ionicKassel42Builder_stripBrackets
+  methods: 	ionicKassel42Builder_outdated 	ionicKassel42Builder_load 	ionicKassel42Builder_initLoaderMap 	ionicKassel42Builder_getObjectId 	ionicKassel42Builder_addToGroup 	ionicKassel42Builder_stripBrackets
   model: 	c
   modified: 	false
   name: 	IonicKassel42Builder
@@ -249,6 +249,7 @@ handleDemoCarConnectedEvent(event);
       }
 
       if (oldEvent.getId().compareTo(event.getId()) < 0) {
+         new org.fulib.yaml.Yamler2().mergeObjects(oldEvent, event);
          eventStore.put(event.getBlockId(), event);
          return false;
       }
@@ -304,6 +305,22 @@ handleDemoCarConnectedEvent(event);
   paramsString: 	""
   returnType: 	void
   signature: 	"class/IonicKassel42Builder/method/initLoaderMap()"
+
+- ionicKassel42Builder_getObjectId: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	ionicKassel42Builder
+  declaration: 	"public String getObjectId(String value)"
+  id: 	IonicKassel42Builder_getObjectId
+  methodBody: 	"      if (value == null) {
+         return null;
+      }
+      return value.replaceAll(\"\\W+\", \"_\");"
+  modified: 	false
+  modifiers: 	public
+  name: 	getObjectId
+  paramsString: 	"String value"
+  returnType: 	String
+  signature: 	"class/IonicKassel42Builder/method/getObjectId(String)"
 
 - ionicKassel42Builder_addToGroup: 	org.fulib.classmodel.FMethod
   annotations: 	""
