--- a/test/src/main/java/uks/debuggen/interconnect/CityElectricsKassel/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/interconnect/CityElectricsKassel/classModel.yaml
@@ -31,7 +31,7 @@
   attributes: 	cityElectricsKasselBuilder_model 	cityElectricsKasselBuilder_eventStore 	cityElectricsKasselBuilder_loaderMap 	cityElectricsKasselBuilder_groupStore
   importList: 	"import java.util.LinkedHashMap;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.interconnect.events.*;" 	"import java.util.function.Function;"
   imports: 	"import java.util.LinkedHashMap;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.interconnect.events.*;" 	"import java.util.function.Function;"
-  methods: 	cityElectricsKasselBuilder_outdated 	cityElectricsKasselBuilder_load 	cityElectricsKasselBuilder_initLoaderMap 	cityElectricsKasselBuilder_getVarName 	cityElectricsKasselBuilder_addToGroup 	cityElectricsKasselBuilder_stripBrackets
+  methods: 	cityElectricsKasselBuilder_outdated 	cityElectricsKasselBuilder_load 	cityElectricsKasselBuilder_initLoaderMap 	cityElectricsKasselBuilder_getObjectId 	cityElectricsKasselBuilder_addToGroup 	cityElectricsKasselBuilder_stripBrackets
   model: 	c
   modified: 	false
   name: 	CityElectricsKasselBuilder
@@ -298,26 +298,21 @@ handleDemoChargingRequestedEvent(event);
   returnType: 	void
   signature: 	"class/CityElectricsKasselBuilder/method/initLoaderMap()"
 
-- cityElectricsKasselBuilder_getVarName: 	org.fulib.classmodel.FMethod
+- cityElectricsKasselBuilder_getObjectId: 	org.fulib.classmodel.FMethod
   annotations: 	""
   clazz: 	cityElectricsKasselBuilder
-  declaration: 	"public String getVarName(String value)"
-  id: 	CityElectricsKasselBuilder_getVarName
+  declaration: 	"public String getObjectId(String value)"
+  id: 	CityElectricsKasselBuilder_getObjectId
   methodBody: 	"      if (value == null) {
          return null;
       }
-      String[] split = value.split(\"\\s+\");
-      String varName = split[0];
-      for (int i = 1; i < split.length; i++) {
-         varName += org.fulib.StrUtil.cap(split[i]);
-      }
-      return varName;"
+      return value.replaceAll(\"\\W+\", \"_\");"
   modified: 	false
   modifiers: 	public
-  name: 	getVarName
+  name: 	getObjectId
   paramsString: 	"String value"
   returnType: 	String
-  signature: 	"class/CityElectricsKasselBuilder/method/getVarName(String)"
+  signature: 	"class/CityElectricsKasselBuilder/method/getObjectId(String)"
 
 - cityElectricsKasselBuilder_addToGroup: 	org.fulib.classmodel.FMethod
   annotations: 	""
