--- a/test/src/main/java/uks/debuggen/interconnect/IonicKassel42/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/interconnect/IonicKassel42/classModel.yaml
@@ -31,7 +31,7 @@
   attributes: 	ionicKassel42Builder_model 	ionicKassel42Builder_eventStore 	ionicKassel42Builder_loaderMap 	ionicKassel42Builder_groupStore
   importList: 	"import java.util.LinkedHashMap;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.interconnect.events.*;" 	"import java.util.function.Function;"
   imports: 	"import java.util.LinkedHashMap;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.interconnect.events.*;" 	"import java.util.function.Function;"
-  methods: 	ionicKassel42Builder_outdated 	ionicKassel42Builder_load 	ionicKassel42Builder_initLoaderMap 	ionicKassel42Builder_getVarName 	ionicKassel42Builder_addToGroup 	ionicKassel42Builder_stripBrackets
+  methods: 	ionicKassel42Builder_outdated 	ionicKassel42Builder_load 	ionicKassel42Builder_initLoaderMap 	ionicKassel42Builder_getObjectId 	ionicKassel42Builder_addToGroup 	ionicKassel42Builder_stripBrackets
   model: 	c
   modified: 	false
   name: 	IonicKassel42Builder
@@ -306,26 +306,21 @@ handleDemoCarConnectedEvent(event);
   returnType: 	void
   signature: 	"class/IonicKassel42Builder/method/initLoaderMap()"
 
-- ionicKassel42Builder_getVarName: 	org.fulib.classmodel.FMethod
+- ionicKassel42Builder_getObjectId: 	org.fulib.classmodel.FMethod
   annotations: 	""
   clazz: 	ionicKassel42Builder
-  declaration: 	"public String getVarName(String value)"
-  id: 	IonicKassel42Builder_getVarName
+  declaration: 	"public String getObjectId(String value)"
+  id: 	IonicKassel42Builder_getObjectId
   methodBody: 	"      if (value == null) {
          return null;
       }
-      String[] split = value.split(\"\\s+\");
-      String varName = split[0];
-      for (int i = 1; i < split.length; i++) {
-         varName += org.fulib.StrUtil.cap(split[i]);
-      }
-      return varName;"
+      return value.replaceAll(\"\\W+\", \"_\");"
   modified: 	false
   modifiers: 	public
-  name: 	getVarName
+  name: 	getObjectId
   paramsString: 	"String value"
   returnType: 	String
-  signature: 	"class/IonicKassel42Builder/method/getVarName(String)"
+  signature: 	"class/IonicKassel42Builder/method/getObjectId(String)"
 
 - ionicKassel42Builder_addToGroup: 	org.fulib.classmodel.FMethod
   annotations: 	""
