--- a/test/src/main/java/uks/debuggen/page/Shop/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/page/Shop/classModel.yaml
@@ -31,7 +31,7 @@
   attributes: 	shopBuilder_model 	shopBuilder_eventStore 	shopBuilder_loaderMap 	shopBuilder_groupStore
   importList: 	"import java.util.LinkedHashMap;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.page.events.*;" 	"import java.util.function.Function;"
   imports: 	"import java.util.LinkedHashMap;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.page.events.*;" 	"import java.util.function.Function;"
-  methods: 	shopBuilder_outdated 	shopBuilder_load 	shopBuilder_initLoaderMap 	shopBuilder_getVarName 	shopBuilder_addToGroup 	shopBuilder_stripBrackets
+  methods: 	shopBuilder_outdated 	shopBuilder_load 	shopBuilder_initLoaderMap 	shopBuilder_getObjectId 	shopBuilder_addToGroup 	shopBuilder_stripBrackets
   model: 	c
   modified: 	false
   name: 	ShopBuilder
@@ -199,6 +199,7 @@
       }
 
       if (oldEvent.getId().compareTo(event.getId()) < 0) {
+         new org.fulib.yaml.Yamler2().mergeObjects(oldEvent, event);
          eventStore.put(event.getBlockId(), event);
          return false;
       }
@@ -255,26 +256,21 @@
   returnType: 	void
   signature: 	"class/ShopBuilder/method/initLoaderMap()"
 
-- shopBuilder_getVarName: 	org.fulib.classmodel.FMethod
+- shopBuilder_getObjectId: 	org.fulib.classmodel.FMethod
   annotations: 	""
   clazz: 	shopBuilder
-  declaration: 	"public String getVarName(String value)"
-  id: 	ShopBuilder_getVarName
+  declaration: 	"public String getObjectId(String value)"
+  id: 	ShopBuilder_getObjectId
   methodBody: 	"      if (value == null) {
          return null;
       }
-      String[] split = value.split(\"\\s+\");
-      String varName = split[0];
-      for (int i = 1; i < split.length; i++) {
-         varName += org.fulib.StrUtil.cap(split[i]);
-      }
-      return varName;"
+      return value.replaceAll(\"\\W+\", \"_\");"
   modified: 	false
   modifiers: 	public
-  name: 	getVarName
+  name: 	getObjectId
   paramsString: 	"String value"
   returnType: 	String
-  signature: 	"class/ShopBuilder/method/getVarName(String)"
+  signature: 	"class/ShopBuilder/method/getObjectId(String)"
 
 - shopBuilder_addToGroup: 	org.fulib.classmodel.FMethod
   annotations: 	""
